pkg/lang/testdata/ub/inputs/invalid/default-wrong-type.ub
inputs: {
  size: { type: integer, default: 'x' }
}
